--- a/app.json
+++ b/app.json
@@ -20,6 +20,26 @@
             "description": "enter the password, to get password request owner http://wa.me/918281440156  .",
             "required": true
         },
+        "V_HEADER": {
+            "description": "Set the Header name logo",
+            "required": true,
+            "value": "YOUR HEADER HERE"
+        },
+        "VERIFIED": {
+            "description": "Give with number jid",
+            "required": true,
+            "value": "0@s.whatsapp.net"
+        },
+        "ALL_IMG": {
+            "description": "Set the logo",
+            "required": true,
+            "value": "https://telegra.ph/file/10b9d1ce0b50ae38fc6df.jpg"
+        },
+        "DIALOGUE": {
+            "description": "set the Dialouge",
+            "required": true,
+            "value": "Muthe i love you"
+        },
         "LANGUAGE": {
             "description": "Bot language.English => en",
             "required": true,
