--- a/julie/Dockerfile
+++ b/julie/Dockerfile
@@ -1,6 +1,6 @@
 FROM fusuf/whatsasena:latest
 
-RUN git clone https://github.com/Aj-fx1/ajay /root/WhatsAsenaDuplicated
+RUN git clone https://github.com/Aj-fx1/Kaztroserv9 /root/WhatsAsenaDuplicated
 WORKDIR /root/WhatsAsenaDuplicated/
 ENV TZ=Asia/Kolkata
 RUN npm install supervisor -g
